[package]
name = "map_game_board_rs"
version = "0.1.0"
edition = "2018"
authors = ["Micah Yoder"]
description = "Represent an arbitrary map/territory based board game, like Risk"
readme = "README.md"
license = "GNU GPL v3+"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
